[package]
name = "boilerplate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "serde_json", "chrono", "uuidv07"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
log = "0.4.14"
